tests/snapshots/examples_fixtures/basics__rebinding_with_let.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/rebinding_with_let.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E001]: DUPLICATE NAME

Duplicate binding: `count` is already defined.

  --> examples/basics/rebinding_with_let.flx:3:1
  |
3 | let count = 1;
  | ^^^^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  --> examples/basics/rebinding_with_let.flx:0:1
  |
== stdout ==
<not executed>
